Fixed the alignment

--- a/apps/to-do-list/CSS/to-do-list.css
+++ b/apps/to-do-list/CSS/to-do-list.css
@@ -134,6 +134,7 @@ ul {
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--secondary-grey);
+    text-align: center;
 }
 
 button {
